objects/ssot__ApplicationParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicationId__c</fullName>
        <label>Application</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommentsText__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Application Participant Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantRole__c</fullName>
        <label>Participant Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1741334700200_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationParticipant_ParticipantId_rel</label>
        <referenceTo>ssot__UserGroup__dlm</referenceTo>
        <relationshipLabel>ApplicationParticipant_ParticipantId_rel</relationshipLabel>
        <relationshipName>rel_1741334700200_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1741334707683_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationParticipant_ParticipantId_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ApplicationParticipant_ParticipantId_rel</relationshipLabel>
        <relationshipName>rel_1741334707683_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744306623256_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationParticipant_ApplicationId_rel</label>
        <referenceTo>ssot__Application__dlm</referenceTo>
        <relationshipLabel>ApplicationParticipant_ApplicationId_rel</relationshipLabel>
        <relationshipName>rel_1744306623256_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>